# rubix_solver

./: .gitignore  CMakeFunctions.cmake  CMakeLists.txt  README.md
include/: cross.h  cube.h  cube_face.h  face_parser.h  solver.h  step.h  util.h  valid_cubes.h  white_corners.h  white_cross.h
src/: a.out  cross.cpp  cube.cpp  cube_face.cpp  face_parser.cpp  main.cpp  step.cpp  util.cpp  valid_cubes.cpp  white_corners.cpp  white_cross.cpp
src/CubeFace/: cube_face.cpp  cube_face.h
src/Util/: util.h
